--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body_class: home-intro
     <h2 class="intro-subtitle">Winter is here and so is our blog.</h2>
 
     <nav class="intro-actions">
-      <a href="/nxt/blog" class="button button-ghost" role="button">Proceed</a>
+      <a href="/blog" class="button button-ghost" role="button">Proceed</a>
     </nav>
 
   </div>
